--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="" alt="Your Profile Picture" class="profile-picture">
+            <img src="Dhamani.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Dhamini</h1>
             <p>Bca</p>
         </div>
